--- a/app/globals.css
+++ b/app/globals.css
@@ -55,7 +55,7 @@
 }
 
 .hero__image {
-	@apply relative xl:w-full w-[90%] xl:h-full h-[590px] z-0;
+	@apply flex items-center justify-center relative xl:w-full w-[90%] xl:h-full h-[590px] z-0;
 }
 
 /* .hero__image-overlay {
